# friendship

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
friendship/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  urls.txt  views.py
friendship/locale/ar/LC_MESSAGES/: django.po
friendship/locale/en/LC_MESSAGES/: django.po
friendship/migrations/: 0001_initial.py
